--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.1",
     "eslint": "^6.7.2",
@@ -32,6 +33,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
